[package]
name = "ov"
version = "0.0.1"
authors = ["Frankie Bagnardi <f.bagnardi@gmail.com>"]
edition = "2018"
description = "a collection of traits that allow you to chain off of anything"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
